[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/coin/gold_2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/coin/gold_3.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/coin/gold_1.png" type="Texture" id=3]
[ext_resource path="res://scripts/props/coin.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/sounds/coin.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 42.003

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "bounce"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}

[node name="coin" type="Area2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "spin"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 3 )

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
